# Process_Monitor_Ubuntu24

./: .logrotate.state  CMakeLists.txt  README.md  main
.fake_procfs/cpu/: data
.fake_procfs/inf/: data  status
.fake_procfs/mem/: data
cli/: CMakeLists.txt
cli/src/: system_monitor.c
configs/examples/: loc_rooms.xml  logrotate_local.conf  vts_config.xml
configs/schemas/: loc_rooms.xsd  vts_config.xsd
docs/: architecture.md  cli_commands.md  procfs_contract.md
kernel/my_driver/: .Module.symvers.cmd  .modules.order.cmd  .my_driver.ko.cmd  .my_driver.mod.cmd  .my_driver.mod.o.cmd  .my_driver.o.cmd  Kconfig  Makefile  modules.order  my_driver.ko  my_driver.mod  my_driver.mod.c
kernel/my_driver/include/: pm_drv.h
kernel/my_driver/selftests/: Makefile  pm_kself  pm_kself.c  pm_kself_data.c
kernel/my_driver/src/: .pm_core.o.cmd  .pm_cpu.o.cmd  .pm_inf.o.cmd  .pm_mem.o.cmd  .pm_procfs.o.cmd  pm_core.c  pm_cpu.c  pm_mem.c  pm_procfs.c
scripts/: check_log_rotation.sh  e2e_runner.sh  gen_fake_procfs.sh
tests/: CMakeLists.txt
tests/cli/: test_vi.sh
tests/libpm/: test_cb.c  test_integ_fakefs.c  test_io_backoff.c  test_util.h
tests/vts/: stress_client.c  stress_writer.c
userspace/libpm/: CMakeLists.txt
userspace/libpm/include/: backoff.h  circuit_breaker.h  libpm.h
userspace/libpm/src/: circuit_breaker.c  parser.c  procfs_io.c
userspace/loc_gen/: CMakeLists.txt
userspace/loc_gen/include/: loc_api.h  loc_gen.h  room_store.h
userspace/loc_gen/src/: compat_shim.c  loc_main.c  room_mem_reader.c  room_store.c  vts_adapter.c  xml_loader.c
userspace/vts/: CMakeLists.txt
userspace/vts/include/: io_util.h  req_handler.h  vts_config.h  vts_fifo.h  vts_log.h  vts_net.h  vts_protocol.h  vts_threads.h
userspace/vts/src/: fifo.c  log_write.c  main.c  net_server.c  req_handler.c  threads_coords.c  threads_recv.c  vts_config.c
